handle case when user is blocked
