# docs/swagger.yaml
@@ -132,9 +132,9 @@ definitions:
       isOnline:
         example: true
         type: boolean
-      lastActive:
-        example: 1610000000
-        type: integer
+      updatedAt:
+        example: "2024-01-01T12:00:00.000Z"
+        type: string
       username:
         example: username
         type: string
